<resources>
    <string name="app_name">JPT_demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overflow">overflow</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="not_registered">Not registered? Register Here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="register">Register</string>
    <string name="registertag">Register to track the price of your favorite items</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logintag">Log In to track the price of your favorite items</string>
    <string name="product_image">product image</string>
    <string name="by">by</string>
    <string name="current_price_ksh">Current Price: Ksh. %1$d</string>
    <string name="previous_price_ksh">Previous Price: Ksh. %1$d</string>
    <string name="seller">Seller</string>
    <string name="verify">verify</string>
    <string name="verified">Verified</string>
    <string name="notverified">Not Verified</string>
    <string name="channel_name">Price Drop Alert</string>
    <string name="channel_description">This channel alerts user of a price drop</string>
    <string name="price_drop_alert">Price Drop Detected</string>
    <string name="delete_item">Delete Item</string>
    <string name="target_price">Target Price</string>
    <string name="delete_confirmation">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="set_target_price">Set Target Price</string>
    <string name="enter_desired_target_price">Enter desired target price</string>
    <string name="set_price">SET PRICE</string>
    <string name="settings_title">SETTINGS</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="back_button">back_button</string>
    <string name="about_section_title">About</string>
    <string name="no_item_alert">Please select an item to track</string>
    <string name="buy_now">buy now</string>
    <string name="developed_by_joe_njogu">Developed by Joe Njogu</string>
    <string name="github_com_joenjogu">github.com/joenjogu</string>
    <string name="empty_tracklist_info">Your Tracklist is empty.\n Click the SHOP tab on the left to add new items.</string>
    <string name="email_address">Email Address</string>
    <string name="verification_status">Verification Status</string>
    <string name="forgot_password_reset_here">Forgot Password? Reset Here</string>
</resources>
