<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/overflow"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_more_vert_black_24dp">

        <menu>
            <item
                android:title="@string/settings"
                android:id="@+id/settings"
                app:showAsAction="never"
                android:icon="@drawable/ic_settings_black_24dp">
            </item>

            <item
                android:title="@string/logout"
                android:id="@+id/logout"
                app:showAsAction="never"
                android:icon="@drawable/ic_power_settings_new_black_24dp">
            </item>
        </menu>
    </item>

</menu>