<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentSetTargetPrice">

    <TextView
        android:id="@+id/tv_set_target_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        android:layout_margin="15dp"
        android:text="@string/set_target_price" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_target_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="number"
        android:hint="@string/enter_desired_target_price"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_target_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_price"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

</LinearLayout>