<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentMe">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:text="@string/email_address"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/mefragemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        tools:text="demo@gmail.com"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:text="@string/verification_status"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/mefragverificationstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        tools:text="Not Verified"/>

    <Button
        android:id="@+id/btn_verify"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="sans-serif"
        android:text="@string/verify"
        android:textColor="@android:color/white" />

</LinearLayout>