<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@color/design_default_color_primary">

        </ImageButton>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorWhite"
            app:title="SETTINGS"
            app:titleMarginStart="100dp">

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="100">

        <TextView
            android:id="@+id/tv_allow_notifications"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:text="@string/allow_notifications"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="viewStart">
        </TextView>

        <Switch
            android:id="@+id/switch_allow_notification"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="30">

        <TextView
            android:id="@+id/about"
            android:text="@string/about_section_title"
            android:textSize="22sp"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_gravity="bottom"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/developed_by_joe_njogu"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/github_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/github_com_joenjogu"
            android:autoLink="web"
            android:textColorLink="@color/colorHyperlink"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>